package Lojas;

public interface Renda {
    double calcRenda();
}
