@startuml

title __SPRINT's Class Diagram__\n

  namespace  {
    class CentroComercial {
    }
  }
  

  namespace  {
    namespace ojas {
      class Lojas.Compare {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      interface Lojas.CustoSeguranca {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      class Lojas.Loja {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      class Lojas.LojaAncora {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      class Lojas.LojaAncoraExterna {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      class Lojas.LojaComum {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      class Lojas.LojaComumQuiosque {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      class Lojas.LojaComumRestauracao {
      }
    }
  }
  

  namespace  {
    namespace ojas {
      interface Lojas.Renda {
      }
    }
  }
  

  namespace  {
    class main {
    }
  }
  

  Lojas.Compare .up.|> java.util.Comparator
  Lojas.Loja .up.|> java.lang.Comparable
  Lojas.LojaAncora .up.|> Lojas.CustoSeguranca
  Lojas.LojaAncora -up-|> Lojas.Loja
  Lojas.LojaAncoraExterna .up.|> Lojas.CustoSeguranca
  Lojas.LojaAncoraExterna .up.|> Lojas.Renda
  Lojas.LojaAncoraExterna -up-|> Lojas.LojaAncora
  Lojas.LojaComum -up-|> Lojas.Loja
  Lojas.LojaComumQuiosque .up.|> Lojas.Renda
  Lojas.LojaComumQuiosque -up-|> Lojas.LojaComum
  Lojas.LojaComumRestauracao .up.|> Lojas.CustoSeguranca
  Lojas.LojaComumRestauracao .up.|> Lojas.Renda
  Lojas.LojaComumRestauracao -up-|> Lojas.LojaComum


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
